--- a/Neermax/index.html
+++ b/Neermax/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+  <title>Neermax</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -62,27 +62,27 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <!-- <h5 class="center">Speeds up development</h5> -->
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">We aim at reducing water pollution and conserve water by adoptiing and implementing the latest technologies to serve the world at large.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-            <h5 class="center">User Experience Focused</h5>
+            <!-- <h5 class="center">User Experience Focused</h5> -->
 
-            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
+            <p class="light">We are quality conscious organization and pay full attention to total quality management system.</p>
           </div>
         </div>
 
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-            <h5 class="center">Easy to work with</h5>
+            <!-- <h5 class="center">Easy to work with</h5> -->
 
-            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+            <p class="light">We use products and equipments of premium quality for water and waste water treatment process.</p>
           </div>
         </div>
       </div>
@@ -98,26 +98,28 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="blue-text">Company Bio</h5>
-          <p class="blue-text text-darken-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <p class="blue-text text-darken-4">We provide a wide range of services to clients to fulfill all their needs under one roof in an integrated fashion. Our expertise covers all aspects of water supply ranging from source identification to providing water to the consumers.</p>
 
 
         </div>
         <div class="col l3 s12">
-          <h5 class="blue-text">Settings</h5>
+          <h5 class="blue-text">Services</h5>
           <ul>
-            <li><a class="blue-text text-darken-4" href="#!">Link 1</a></li>
-            <li><a class="blue-text text-darken-4" href="#!">Link 2</a></li>
-            <li><a class="blue-text text-darken-4" href="#!">Link 3</a></li>
-            <li><a class="blue-text text-darken-4" href="#!">Link 4</a></li>
+            <li class="blue-text text-darken-4">Sewage treatment plant</li>
+            <li class="blue-text text-darken-4">Rain Water Harvesting</li>
+            <li class="blue-text text-darken-4">Water treatment plant</li>
+            <li class="blue-text text-darken-4">Mep</li>
+            <li class="blue-text text-darken-4">Treated Water supply</li>
           </ul>
         </div>
         <div class="col l3 s12">
-          <h5 class="blue-text">Connect</h5>
+          <h5 class="blue-text">Reach Us</h5>
           <ul>
-            <li><a class="blue-text text-darken-4" href="#!">Link 1</a></li>
-            <li><a class="blue-text text-darken-4" href="#!">Link 2</a></li>
-            <li><a class="blue-text text-darken-4" href="#!">Link 3</a></li>
-            <li><a class="blue-text text-darken-4" href="#!">Link 4</a></li>
+            <li class="blue-text text-darken-4">PP6/465B Ehthishad Building</li>
+            <li class="blue-text text-darken-4">Peruvayal P.O,</li>
+            <li class="blue-text text-darken-4">Poovattuparamb,</li>
+            <li class="blue-text text-darken-4">Calicut,</li>
+            <li class="blue-text text-darken-4">Kerala. Pin Code: 673008</li>
           </ul>
         </div>
       </div>
