--- a/Neermax/contact.html
+++ b/Neermax/contact.html
@@ -104,13 +104,46 @@
           
     </div>
     <!-- contact us form ends  -->
-    <footer class="page-footer light-blue lighten-5">
-      <div class="">
-        <div class="container">
-        <label for="" class="blue-text">Made by </label><a class="blue-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-        </div>
+ <!-- footer starts  -->
+ <footer class="page-footer light-blue lighten-5 ">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="blue-text">Company Bio</h5>
+        <p class="blue-text text-darken-4">We provide a wide range of services to clients to fulfill all their needs under one roof in an integrated fashion. Our expertise covers all aspects of water supply ranging from source identification to providing water to the consumers.</p>
+
+
       </div>
-    </footer>
+      <div class="col l3 s12">
+        <h5 class="blue-text">Services</h5>
+        <ul>
+          <li class="blue-text text-darken-4">Sewage treatment plant</li>
+          <li class="blue-text text-darken-4">Rain Water Harvesting</li>
+          <li class="blue-text text-darken-4">Water treatment plant</li>
+          <li class="blue-text text-darken-4">Mep</li>
+          <li class="blue-text text-darken-4">Treated Water supply</li>
+        </ul>
+      </div>
+      <div class="col l3 s12">
+        <h5 class="blue-text">Reach Us</h5>
+        <ul>
+          <li class="blue-text text-darken-4">PP6/465B Ehthishad Building</li>
+          <li class="blue-text text-darken-4">Peruvayal P.O,</li>
+          <li class="blue-text text-darken-4">Poovattuparamb,</li>
+          <li class="blue-text text-darken-4">Calicut,</li>
+          <li class="blue-text text-darken-4">Kerala. Pin Code: 673008</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container">
+    <label for="" class="blue-text">Made by </label><a class="blue-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+    </div>
+  </div>
+</footer>
+
+<!-- footer ends  -->
       <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
