--- a/Neermax/index.html
+++ b/Neermax/index.html
@@ -8,7 +8,12 @@
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-
+<style>
+  .responsive {
+  width: 100%;
+  height: auto;
+}
+</style>
 </head>
 <body>
   <!-- menu / Navigation starts -->
@@ -50,7 +55,7 @@
     
           </div>
         </div>
-        <div class="parallax"><img src="images/pexels-khwanchai-phanthong-4175028.jpg" height="800" width="100%" alt="Unsplashed background img 1"></div>
+        <div class="parallax"><img src="images/pexels-khwanchai-phanthong-4175028.jpg" height="800" width="100%" alt="Unsplashed background img 1" class="responsive"></div>
       </div>
 <!-- body section 1 ends -->
 <!-- body section 2 starts  -->
