--- a/Neermax/index.html
+++ b/Neermax/index.html
@@ -54,7 +54,7 @@
     
           </div>
         </div>
-        <div class="parallax"><img src="images/pexels-khwanchai-phanthong-4175028.jpg" height="800" alt="Unsplashed background img 1" class="responsive"></div>
+        <div class="parallax"><img src="images/pexels-khwanchai-phanthong-4175028.jpg" height="800" alt="Unsplashed background img 1" class="responsive-img"></div>
       </div>
 <!-- body section 1 ends -->
 <!-- body section 2 starts  -->
