--- a/Neermax/index.html
+++ b/Neermax/index.html
@@ -49,7 +49,7 @@
       <!-- Body starts here -->
 
       <!-- body section 1 -->
-      <div id="index-banner" class="parallax-container">
+      <div id="index-banner" class="container">
         <div class="section no-pad-bot">
           <div class="container">
             <br><br><br><br> <br><br>
