--- a/Neermax/services.html
+++ b/Neermax/services.html
@@ -35,7 +35,9 @@
     <!-- Row 1 stating MEP  -->
     <div class="container">
       <div class="row">
-        <div class="col m6">Image</div>
+        <div class="col m6">
+          <img src="images/mep.jpg" alt="" class="responsive-img">
+        </div>
         <div class="col m6">
           <div class="card-panel teal light-blue lighten-5 z-depth-3">
             <h5>MEP</h5>
@@ -59,14 +61,18 @@
             </p>
           </div>
         </div>
-        <div class="col m6">Image</div>
+        <div class="col m6">
+<img src="images/Water T.jpg" alt="" class="responsive-img">
+        </div>
       </div>  
     </div>
     <!-- row 2 ending Water Treatment   -->
     <!-- Row 3 Starting Sewage Treatment -->
     <div class="container">
       <div class="row">
-        <div class="col m6">Image</div>
+        <div class="col m6">
+<img src="images/Sewage T (1).jpg" alt="" class="responsive-img">
+        </div>
         <div class="col m6">
           <div class="card-panel teal light-blue lighten-5 z-depth-3">
             <h5>Sewage Treatment</h5>
@@ -91,14 +97,18 @@
             </p>
           </div>
         </div>
-        <div class="col m6">Image</div>
+        <div class="col m6">
+<img src="images/AMC .jpg" alt="" class="responsive-img">
+        </div>
       </div>  
     </div>
     <!-- Row 4 ending Operation and Maintenance -->
     <!-- Row 5 Starting MEP Training -->
     <div class="container">
       <div class="row">
-        <div class="col m6">Image</div>
+        <div class="col m6">
+<img src="images/MEP TR .jpg" alt="" class="responsive-img">          
+        </div>
         <div class="col m6">
           <div class="card-panel teal light-blue lighten-5 z-depth-3">
             <h5>MEP Training</h5>
