--- a/Neermax/services.html
+++ b/Neermax/services.html
@@ -36,7 +36,7 @@
     <div class="container">
       <div class="row">
         <div class="col m6">
-          <img src="images/mep.jpg" alt="" class="responsive-img">
+          <img src="images/mep.jpg" alt="MEP Image" class="responsive-img">
         </div>
         <div class="col m6">
           <div class="card-panel teal light-blue lighten-5 z-depth-3">
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="col m6">
-<img src="images/Water T.jpg" alt="" class="responsive-img">
+<img src="images/Water T.jpg" alt="Glass water" class="responsive-img">
         </div>
       </div>  
     </div>
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row">
         <div class="col m6">
-<img src="images/Sewage T (1).jpg" alt="" class="responsive-img">
+<img src="images/Sewage T (1).jpg" alt="Sewage plant" class="responsive-img">
         </div>
         <div class="col m6">
           <div class="card-panel teal light-blue lighten-5 z-depth-3">
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="col m6">
-<img src="images/AMC .jpg" alt="" class="responsive-img">
+<img src="images/AMC .jpg" alt="maintenance image" class="responsive-img">
         </div>
       </div>  
     </div>
@@ -107,7 +107,7 @@
     <div class="container">
       <div class="row">
         <div class="col m6">
-<img src="images/MEP TR .jpg" alt="" class="responsive-img">          
+<img src="images/MEP TR .jpg" alt="training image" class="responsive-img">          
         </div>
         <div class="col m6">
           <div class="card-panel teal light-blue lighten-5 z-depth-3">
