--- a/Neermax/test.html
+++ b/Neermax/test.html
@@ -8,7 +8,13 @@
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-</head>
+
+    <style>
+            .parallax-container {
+      height: "500";
+    }
+    </style>
+    </head>
 <body>
       <!-- menu / Navigation starts -->
   <nav class="light-blue lighten-5" role="navigation">
@@ -47,8 +53,11 @@
     </div>
     
 </div>
-<div class="container-fluid"><div class="parallax-container"><div class="parallax"><img src="images/Water T.jpg" alt=""></div></div></div>    
+<!-- <div class="container-fluid"> --><div class="parallax-container"><div class="parallax"><img src="images/Water T.jpg" alt=""></div></div><!-- </div> -->    
     <!-- Services ends here -->
+
+
+
  <!-- footer starts  -->
  <footer class="page-footer light-blue lighten-5 ">
   <div class="container">
