New neermax added
New neermax site added

--- a/Neermax/test.html
+++ b/Neermax/test.html
@@ -16,6 +16,8 @@
     </style>
     </head>
 <body>
+
+
       <!-- menu / Navigation starts -->
   <nav class="light-blue lighten-5" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"> <img src="images/logo.png" alt="Neermax" height="50px" width="170px"> </a>
@@ -36,13 +38,18 @@
     </div>
   </nav>
     <!-- menu / Navigation Ends -->
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="images/pexels-khwanchai-phanthong-4175028.jpg" class="responsive-img">
+      </div>
+    </div>
     <!-- Services starts here  -->
 <div class="container-fluid">
     <div class="row">
         <div class="col m8">
             <div class="parallax-container">
                 <div class="parallax">
-                    <img src="images/Water T.jpg" alt="">
+                    <img src="images/Water T.jpg" alt="" class="responsive-img">
                 </div>
             </div>
         </div>
@@ -53,7 +60,7 @@
     </div>
     
 </div>
-<!-- <div class="container-fluid"> --><div class="parallax-container"><div class="parallax"><img src="images/Water T.jpg" alt=""></div></div><!-- </div> -->    
+<!-- <div class="container-fluid"> --><div class="parallax-container"><div class="parallax"><img src="images/Water T.jpg" class="responsive-img" alt=""></div></div><!-- </div> -->    
     <!-- Services ends here -->
 
 
@@ -62,13 +69,16 @@
  <footer class="page-footer light-blue lighten-5 ">
   <div class="container">
     <div class="row">
-      <div class="col l6 s12">
-        <h5 class="blue-text">Company Bio</h5>
-        <p class="blue-text text-darken-4">We provide a wide range of services to clients to fulfill all their needs under one roof in an integrated fashion. Our expertise covers all aspects of water supply ranging from source identification to providing water to the consumers.</p>
-
-
+      <div class="col l4 m4 s12">
+        <h5 class="blue-text">Quick Links</h5>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
       </div>
-      <div class="col l3 s12">
+      <div class="col l4 m4 s12">
         <h5 class="blue-text">Services</h5>
         <ul>
           <li class="blue-text text-darken-4">Sewage treatment plant</li>
@@ -78,7 +88,7 @@
           <li class="blue-text text-darken-4">Treated Water supply</li>
         </ul>
       </div>
-      <div class="col l3 s12">
+      <div class="col l4 m4 s12">
         <h5 class="blue-text">Reach Us</h5>
         <ul>
           <li class="blue-text text-darken-4">PP6/465B Ehthishad Building</li>
