--- a/Neermax/about.html
+++ b/Neermax/about.html
@@ -83,13 +83,16 @@
  <footer class="page-footer light-blue lighten-5 ">
   <div class="container">
     <div class="row">
-      <div class="col l6 s12">
-        <h5 class="blue-text">Company Bio</h5>
-        <p class="blue-text text-darken-4">We provide a wide range of services to clients to fulfill all their needs under one roof in an integrated fashion. Our expertise covers all aspects of water supply ranging from source identification to providing water to the consumers.</p>
-
-
+      <div class="col l4 m4 s12">
+        <h5 class="blue-text">Quick Links</h5>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
       </div>
-      <div class="col l3 s12">
+      <div class="col l4 m4 s12">
         <h5 class="blue-text">Services</h5>
         <ul>
           <li class="blue-text text-darken-4">Sewage treatment plant</li>
@@ -99,7 +102,7 @@
           <li class="blue-text text-darken-4">Treated Water supply</li>
         </ul>
       </div>
-      <div class="col l3 s12">
+      <div class="col l4 m4 s12">
         <h5 class="blue-text">Reach Us</h5>
         <ul>
           <li class="blue-text text-darken-4">PP6/465B Ehthishad Building</li>
