--- a/Neermax/index.html
+++ b/Neermax/index.html
@@ -230,7 +230,7 @@
           <div class="card" data-aos="fade-up">
             <img src="assets/img/om.jpg" class="card-img-top" alt="..." height="250px">
             <div class="card-body">
-              <h5 class="card-title">OPERATION AND MAINTENANCE</h5>
+              <h5 class="card-title">OPERATION & MAINTENANCE</h5>
               <p class="card-text">We offer annual maintenance contract service for keeping a building functional and livable. Neermax helps clients in improving the performance and rehabilitation of their infrastructure asset, there by extracting greater value and reducing original Maintenance Costs.</p>
             </div>
           </div>
@@ -376,7 +376,7 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> Mep</li>
               <li><i class="bx bx-chevron-right"></i> Water treatment plant</li>
-              <li><i class="bx bx-chevron-right"></i> Sewage treatment plantWater treatment plant</li>
+              <li><i class="bx bx-chevron-right"></i> Sewage treatment plant
               <li><i class="bx bx-chevron-right"></i> Rain Water Harvesting</li>
               <li><i class="bx bx-chevron-right"></i> Mep Training</li>
             </ul>
