--- a/Neermax/index.html
+++ b/Neermax/index.html
@@ -235,7 +235,7 @@
             </div>
           </div>
           <div class="card" data-aos="fade-up">
-            <img src="assets/img/mt.jpg" class="card-img-top" alt="...">
+            <img src="assets/img/mt.jpg" class="card-img-top" alt="..." height="250px">
             <div class="card-body">
               <h5 class="card-title">MEP TRAINING</h5>
               <p class="card-text">We offer project oriented international level training solutions based on the modern industry. We are helping to emerge the next generation of industry leaders and experts by providing a wide range of training and certifications tailored to the modern industry demands.</p>
