--- a/Neermax/index.html
+++ b/Neermax/index.html
@@ -349,7 +349,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div class="footer-top">
+    <div class="footer-top" style="background-color: #f1f6fe;">
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6 footer-links">
