--- a/Neermax/index.html
+++ b/Neermax/index.html
@@ -200,47 +200,61 @@
           <h3>Check our <span>Services</span></h3>
         </div>
 
-        <div class="card-deck">
-          <div class="card" data-aos="fade-up">
-            <img src="assets/img/mep.jpg" class="card-img-top" alt="..." height="250px">
-            <div class="card-body">
-              <h5 class="card-title">MEP</h5>
-              <p class="card-text">Neermax offers total MEP solutions for Buildings from design to project execution right up to handing over to our customers.     We offer turnkey engineering solutions for buildings with the latest technology in conformity with international standards of quality, security and safety.
-              </p>
+        <div class="row">
+          <div class="col-md-6">
+              <div class="card">
+                <img src="assets/img/mep_new.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5>MEP</h5>
+                  <p class="card-text text-left">Neermax offers total MEP solutions for Buildings from design to project execution right up to handing over to our customers. We offer turnkey engineering solutions for buildings with the latest technology in conformity with international standards of quality, security and safety.</p>
+                </div>
+                <br> <br> <br>
+              </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card">
+              <img src="assets/img/wt_new.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5>Water Treatment</h5>
+                <p class="card-text">Every process plant, to operate efficiently and reliably, requires a total water treatment system for make-up water, cooling water, boiler water, condensates and water recovery. No matter your size, market, or application, Neermax have the experience, the technology, and the infrastructure to be your water purification partner. We supply treated pure water to any locations as per client requirements.</p>
+              </div>
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
-            <img src="assets/img/wt.jpg" class="card-img-top" alt="..." height="250px">
-            <div class="card-body">
-              <h5 class="card-title"> WATER TREATMENT</h5>
-              <p class="card-text">Every process plant, to operate efficiently and reliably, requires a total water treatment system for make-up water, cooling water, boiler water, condensates and water recovery. No matter your size, market, or application, Neermax have the experience, the technology, and the infrastructure to be your water purification partner. We supply treated pure water to any locations as per client requirements.</p>
-            </div>
-          </div>
-          
         </div>
-        <br>
-        <div class="card-deck" data-aos="fade-up">
-          <div class="card">
-            <img src="assets/img/st.jpg" class="card-img-top" alt="..." height="250px">
-            <div class="card-body">
-              <h5 class="card-title">SEWAGE TREATMENT</h5>
-              <p class="card-text">We offer a technically advanced Sewage Treatment Plant, which is used to treat large amounts of sewage effectively. With a combination of several steps, our Sewage Treatment Plants treat the toughest sewage without using much power. Our engineer’s work closely with the clients to provide cost-effective solutions for their specific needs.</p>
+        <hr>
+        <div class="row">
+          <div class="col-md-6">
+              <div class="card">
+                <img src="assets/img/st_new.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5>Sewage Treatment</h5>
+                  <p class="card-text text-left">We offer a technically advanced Sewage Treatment Plant, which is used to treat large amounts of sewage effectively. With a combination of several steps, our Sewage Treatment Plants treat the toughest sewage without using much power. Our engineer’s work closely with the clients to provide cost-effective solutions for their specific needs.</p>
+                </div>
+              </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card">
+              <img src="assets/img/om_new.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5>Operation & Maintenance</h5>
+                <p class="card-text">We offer annual maintenance contract service for keeping a building functional and livable. Neermax helps clients in improving the performance and rehabilitation of their infrastructure asset, there by extracting greater value and reducing original Maintenance Costs.      </p>
+              </div>
+              <br>             
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
-            <img src="assets/img/om.jpg" class="card-img-top" alt="..." height="250px">
-            <div class="card-body">
-              <h5 class="card-title">OPERATION & MAINTENANCE</h5>
-              <p class="card-text">We offer annual maintenance contract service for keeping a building functional and livable. Neermax helps clients in improving the performance and rehabilitation of their infrastructure asset, there by extracting greater value and reducing original Maintenance Costs.</p>
+        </div>
+        <hr>
+        <div class="row justify-content-center">
+          <div class="col-md-6">
+            <div class="card">
+              <img src="assets/img/mt_new.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5>MEP Training</h5>
+                <p class="card-text">We offer project oriented international level training solutions based on the modern industry. We are helping to emerge the next generation of industry leaders and experts by providing a wide range of training and certifications tailored to the modern industry demands.</p>
+              </div>
+              <br>             
             </div>
           </div>
-          <div class="card" data-aos="fade-up">
-            <img src="assets/img/mt.jpg" class="card-img-top" alt="..." height="250px">
-            <div class="card-body">
-              <h5 class="card-title">MEP TRAINING</h5>
-              <p class="card-text">We offer project oriented international level training solutions based on the modern industry. We are helping to emerge the next generation of industry leaders and experts by providing a wide range of training and certifications tailored to the modern industry demands.</p>
-            </div>
-          </div>          
         </div>
       </div>
     </section><!-- End Services Section -->
