--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="card border-primary mb-3" style="max-width: 900px;">
                 <div class="row g-0 align-items-center">
                     <div class="col-md-4">
-                        <img src="./My_Image.JPG" alt="My Picture" class="img-fluid img-thumbnail">
+                        <img src="./My_Image.jpg" alt="My Picture" class="img-fluid img-thumbnail">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
