--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <br>
                                 <a href="https://www.facebook.com/gokulsangeethika"><i class="material-icons md-36">facebook</i></a>
                                 <a href="mailto:gokulsangeethika@gmail.com"><i class="material-icons md-36">email</i></a>
-                                <a href="https://www.messenger.com/gokulsangeethika"><i class="material-icons">speaker_notes</i></a>
+                                <a href="https://www.m.me/Gokul.Sangeethika"><i class="material-icons">speaker_notes</i></a>
                                 <a href="tel:+918943192879"><i class="material-icons">call</i></a>
                             </p>
                         </div>
