--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Lukogs</title>
     </head>
     <body>
-        <div class="d-flex">
+        <div class="d-flex justify-content-center">
             <div class="card border-primary mb-3" style="max-width: 900px;">
                 <div class="row g-0 align-items-center">
                     <div class="col-md-4">
