--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-            rel="stylesheet">
+        <!-- Place your kit's code here -->
+        <script src="https://kit.fontawesome.com/9e9632ef4c.js" crossorigin="anonymous"></script>
         <title>Lukogs</title>
     </head>
     <body>
@@ -27,14 +27,32 @@
                                 <li>getBootstrap,</li>
                                 <li>Materialize.</li>
                                 <br>
-                                I also do Graphic Design such [banner, poster, flyers, birthday cards, social media images etc.]
+                                I also do Graphic Design [banner, poster, flyers, birthday cards, social media images etc.].
+                                <hr>
+                                <h3>Projects</h3>
+                                This is my first project, It's small but its a start. &nbsp;<strong><a href="http://neermax.com" class="link-primary">Neermax</a></strong>
                             </p>
                             <p class="card-text"><small class="text-muted">Conneect with me:</small>
                                 <br>
-                                <a href="https://www.facebook.com/gokulsangeethika"><i class="material-icons md-36">facebook</i></a>
-                                <a href="mailto:gokulsangeethika@gmail.com"><i class="material-icons md-36">email</i></a>
-                                <a href="https://www.m.me/Gokul.Sangeethika"><i class="material-icons">speaker_notes</i></a>
-                                <a href="tel:+918943192879"><i class="material-icons">call</i></a>
+                                <table>
+                                    <tr>
+                                        <td>Formal</td>
+                                        <td><button type="button" class="btn btn-link"><a href="mailto:gokulsangeethika@gmail.com"><i class="fas fa-envelope"></i></a></button></td>
+                                        <td><button type="button" class="btn btn-link"><a href="https://github.com/lukogs"><i class="fab fa-github"></i></a></button></td>
+                                        <td><button type="button" class="btn btn-link"><a href="https://www.linkedin.com/in/lukogs"><i class="fab fa-linkedin"></i></a></button> <br></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Personal</td>
+                                        <td><button type="button" class="btn btn-link"><a href="tel:+918943192879"><i class="fas fa-phone-square-alt"></i></a></button></td>
+                                        <td><button type="button" class="btn btn-link"> <a href="sms:+918943192879"><i class="fas fa-comments"></i></a></button></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Social</td>
+                                        <td><button type="button" class="btn btn-link"> <a href="https://www.facebook.com/gokulsangeethika"><i class="fab fa-facebook-square"></i></a></button></td>
+                                        <td><button type="button" class="btn btn-link"> <a href="https://www.messenger.com/gokulsangeethika"><i class="fab fa-facebook-messenger"></i></a></button></td>
+                                        <td><button type="button" class="btn btn-link"> <a href="https://twitter.com/Gokul309"><i class="fab fa-twitter"></i></a></button></td>
+                                    </tr>
+                                </table>
                             </p>
                         </div>
                     </div>
