--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <h3>Projects</h3>
                                 This is my first project, It's small but its a start. &nbsp;<strong><a href="http://neermax.com" class="link-primary">Neermax</a></strong>
                             </p>
-                            <p class="card-text"><small class="text-muted">Conneect with me:</small>
+                            <p class="card-text"><small class="text-muted">Connect with me:</small>
                                 <br>
                                 <table>
                                     <tr>
