--- a/index.html
+++ b/index.html
@@ -22,15 +22,18 @@
                         <div class="card-body">
                             <h1>Lukogs</h1>
                             <p class="card-text">
-                                Greetings, <br> I do simple CSS framework based website. Favourite framework are
+                                Greetings, <br> I do CSS framework based website. Favourite framework are
                                 <li>Tailwind,</li>
                                 <li>getBootstrap,</li>
                                 <li>Materialize.</li>
                                 <br>
-                                I also do Graphic Design [banner, poster, flyers, birthday cards, social media images etc.].
+                                I do Graphic Design [banner, poster, flyers, birthday cards, social media images etc.], Photography [Portraits, Pets], Videography [Documentary, YouTube, Basic Live Streaming]. For more information <a href="https://lukogs.wordpress.com/">click here</a>.
                                 <hr>
                                 <h3>Projects</h3>
-                                This is my first project, It's small but its a start. &nbsp;<strong><a href="http://neermax.com" class="link-primary">Neermax</a></strong>
+                                My first project is a Freelanced work for a Water Management Company, &nbsp;<strong><a href="http://neermax.com" class="link-primary">Neermax</a></strong>
+                                Web Dev-ing at <a href="http://lestora.com/"><strong>Lestora Technologies<strong></a>.
+                                Videographer cum Editor at <a href="https://infofriend.com/"><Infofriend</strong></a>.
+                                
                             </p>
                             <p class="card-text"><small class="text-muted">Connect with me:</small>
                                 <br>
