--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <hr>
                                 <h3>Projects</h3>
                                 My first project is a Freelanced work for a Water Management Company, &nbsp;<strong><a href="http://neermax.com" class="link-primary">Neermax</a></strong>
-                                Web Dev-ing at <a href="http://lestora.com/"><strong>Lestora Technologies<strong></a>.
+                                Web Dev-ing at <a href="http://lestora.com/"><strong>Lestora Technologies</strong></a>.
                                 Videographer cum Editor at <a href="https://infofriend.com/"><Infofriend</strong></a>.
                                 
                             </p>
