--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 <h3>Projects</h3>
                                 My first project is a Freelanced work for a Water Management Company, &nbsp;<strong><a href="http://neermax.com" class="link-primary">Neermax</a></strong>
                                 <br>Web Dev-ing at <a href="http://lestora.com/"><strong>Lestora Technologies</strong></a>.
-                                <br>Videographer cum Editor at <a href="https://infofriend.com/">Infofriend</strong></a>.
+                                <br>Videographer cum Editor at <a href="https://infofriend.com/"><strong>Infofriend</strong></a>.
                                 
                             </p>
                             <p class="card-text"><small class="text-muted">Connect with me:</small>
