--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                                 I do Graphic Design [banner, poster, flyers, birthday cards, social media images etc.], Photography [Portraits, Pets], Videography [Documentary, YouTube, Basic Live Streaming]. For more information <a href="https://lukogs.wordpress.com/">click here</a>.
                                 <hr>
                                 <h3>Projects</h3>
-                                My first project is a Freelanced work for a Water Management Company, &nbsp;<strong><a href="http://neermax.com" class="link-primary">Neermax</a></strong>
-                                <br>Web Dev-ing at <a href="http://lestora.com/"><strong>Lestora Technologies</strong></a>
-                                <br>Videographer cum Editor at <a href="https://infofriend.com/"><strong>Infofriend</strong></a>
+                                My first project is a Freelanced work for a Water Management Company, &nbsp;<strong><a href="http://neermax.com" class="link-primary" target="_blank">Neermax</a></strong>
+                                <br>Web Dev-ing at <a href="http://lestora.com/" target="_blank"><strong>Lestora Technologies</strong></a>
+                                <br>Videographer cum Editor at <a href="https://infofriend.com/" target="_blank"><strong>Infofriend</strong></a>
                                 
                             </p>
                             <p class="card-text"><small class="text-muted">Connect with me:</small>
