--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <title>Lukogs</title>
     </head>
     <body>
+        <nav class="navbar navbar-light bg-primary text-white">
+            <div class="container-fluid justify-content-center">
+              <label for="lukogs" class="h1">Lukogs</label>
+            </div>
+          </nav>
         <div class="d-flex justify-content-center">
+
             <div class="card border-primary mb-3" style="max-width: 900px;">
                 <div class="row g-0 align-items-center">
                     <div class="col-md-4">
@@ -20,14 +26,16 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h1>Lukogs</h1>
                             <p class="card-text">
-                                Greetings, <br> I do CSS framework based website. Favourite framework are
-                                <li>Tailwind,</li>
-                                <li>getBootstrap,</li>
-                                <li>Materialize.</li>
-                                <br>
-                                I do Graphic Design [banner, poster, flyers, birthday cards, social media images etc.], Photography [Portraits, Pets], Videography [Documentary, YouTube, Basic Live Streaming]. For more information <a href="https://lukogs.wordpress.com/">click here</a>.
+                                <b>Greetings</b>, <br>
+                                Lukogs is a digital media solution that’s created to provide simple, minimum needs to those who seek it. We provide services in Graphic Design, Web Development, Photography, Videography, Event Live Streaming (basic).
+                                
+                                <br><br> I do 
+                                <li>CSS framework based website</li>
+                                <li>Simple Graphics design [banner, poster, flyers, birthday cards, social media images etc.]. Click <a href="https://drive.google.com/drive/folders/13PdKYvHwUahxxiww-cwagENYBX8F_XEm?usp=sharing" target="_blank"> here</a> to view the arts</li>
+                                <li>Photography [Portraits, Pets]. click <a href="https://lukogs.wordpress.com/gallery/" target="_blank">here</a>  to view snaps.</li>
+                                <li>Videography [Documentary, YouTube, Basic Live Streaming]</li>
+                                
                                 <hr>
                                 <h3>Projects</h3>
                                 My first project is a Freelanced work for a Water Management Company, &nbsp;<strong><a href="http://neermax.com" class="link-primary" target="_blank">Neermax</a></strong>
