--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <hr>
 
                                 <!-- Services section -->
-                                Provided services are:
+                                Service provided:
                                 
                                 <li>CSS framework based website</li>
                                 <li>Wordpress websites [Using Page builders]</li>
