--- a/Techco/contact.html
+++ b/Techco/contact.html
@@ -56,7 +56,7 @@
 <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
-      <h1 class="text-xs text-indigo-900 tracking-widest font-medium title-font mb-1">Our Offices</h1>
+            <h1 class="sm:text-3xl text-2xl font-medium title-font mb-2 text-gray-900">Our Offices</h1>
       <!--<h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900">We provide our serivces to UAE & India</h1> -->
     </div>
     <div class="flex flex-wrap -m-4">
