--- a/finac/about.html
+++ b/finac/about.html
@@ -190,6 +190,33 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-4">
+                <div class="team-item position-relative overflow-hidden">
+                    <img class="img-fluid w-100" src="img/CA Razik Ahmed.jpg" alt="">
+                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
+                        <h3 class="text-white">CA RAZIK AHMED</h3>
+                        <p class="text-white text-uppercase mb-0">Chief Advisor</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="team-item position-relative overflow-hidden">
+                    <img class="img-fluid w-100" src="img/Dr.jpg" alt="">
+                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
+                        <h3 class="text-white">Ahmed Murshid</h3>
+                        <p class="text-white text-uppercase mb-0">Legal Advisor</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="team-item position-relative overflow-hidden">
+                    <img class="img-fluid w-100" src="img/Philip Mathew.jpg" alt="">
+                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
+                        <h3 class="text-white">Salmanul Farisy</h3>
+                        <p class="text-white text-uppercase mb-0">Senior Consultant</p>
+                    </div>
+                </div>
+            </div>            
         </div>
     </div>
     <!-- Team End -->
