--- a/finac/service.html
+++ b/finac/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CONSULT - Consultancy Website Template</title>
+    <title>Finac</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -61,7 +61,8 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"><i class="far fa-smile text-primary me-2"></i>consult</h1>
+            <img src="img/logo.png" class="img-fluid" width="170" height="70" alt="Finac Management Consulting">
+
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -111,12 +112,12 @@
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
-                <div class="service-item bg-secondary text-center px-5">
+                <div class="service-item subservice bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-user-tie fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Management consulting</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0">dfsfdfs</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -125,7 +126,7 @@
                         <i class="fa fa-chart-pie fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Business Planning</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -134,7 +135,7 @@
                         <i class="fa fa-chart-line fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Complete Solutions for NGOs</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -143,7 +144,7 @@
                         <i class="fa fa-chart-area fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Accounting</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -152,7 +153,7 @@
                         <i class="fa fa-balance-scale fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Auditing</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -161,7 +162,7 @@
                         <i class="fa fa-house-damage fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Taxation</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -170,7 +171,7 @@
                         <i class="fa fa-chart-area fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Corporate Affairs</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -179,7 +180,7 @@
                         <i class="fa fa-balance-scale fa-2x"></i>
                     </div>
                     <h3 class="mb-3">legal Advisory</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -188,7 +189,7 @@
                         <i class="fa fa-house-damage fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Consulting Services</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
         </div>
