--- a/finac/service.html
+++ b/finac/service.html
@@ -113,11 +113,11 @@
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
                 <div class="service-item subservice bg-secondary text-center px-5">
-                    <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
+                    <div class="sub1 d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-user-tie fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">Management consulting</h3>
-                    <p class="mb-0">dfsfdfs</p>
+                    <h3 class="mb-3 sub1">Management consulting</h3>
+                    <p class="mb-0" sub1>dfsfdfs</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
