--- a/finac/about.html
+++ b/finac/about.html
@@ -93,16 +93,13 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid bg-dark p-5">
+    <!-- <div class="container-fluid bg-dark p-5">
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">About Us</h1>
-                <!-- <a href="">Home</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="">About</a> -->
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Page Header End -->
 
 
@@ -156,7 +153,7 @@
     <!-- Team Start -->
     <div class="container-fluid py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Our Team Members</h1>
+            <h1 class="display-5 mb-0">FINAC Leading Crew</h1>
             <hr class="w-25 mx-auto bg-primary">
             <p>Our team comprises of reputed Chartered Accountants, Company Secretaries, Advocates, and Management Professionals committed to provide quality experience to our clients. We strive to deeply discern our clients needs and utilize our intuitive prowess to provide ingenious formulas for them.
 
